[gd_scene load_steps=54 format=3 uid="uid://cb46co0m8f53s"]

[ext_resource type="Script" path="res://Script/DogPlayerFSM/Doggy.gd" id="1_njf21"]
[ext_resource type="Texture2D" uid="uid://bwotynnxhce0s" path="res://art/Player/dogattack-Sheet.png" id="2_dx8ja"]
[ext_resource type="Texture2D" uid="uid://dlhssgmjexua2" path="res://art/Interface Elements/Doghealthbar.png" id="2_hitdm"]
[ext_resource type="Texture2D" uid="uid://d0tvs2eft04eb" path="res://art/Player/dogidlev2-Sheet.png" id="2_lkn1a"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/AnimationController.gd" id="3_ai8m0"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/PlayerStateMachine.gd" id="3_bn38j"]
[ext_resource type="Texture2D" uid="uid://botu82rr8ja4" path="res://art/Interface Elements/Doghealthbarover2.png" id="3_by805"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/IdleState.gd" id="4_bagpv"]
[ext_resource type="Texture2D" uid="uid://bmtgwgtq35lwk" path="res://art/Player/dogglide-Sheet.png" id="4_kee2m"]
[ext_resource type="Texture2D" uid="uid://c2nqpycfu27b2" path="res://art/Player/dogjumpv2-Sheet.png" id="4_rgvto"]
[ext_resource type="Texture2D" uid="uid://d0j8fah8kwycl" path="res://art/Interface Elements/ProgressTextureBar.png" id="4_xa1wg"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/RunState.gd" id="5_2emg4"]
[ext_resource type="Texture2D" uid="uid://b5po54oukvgdx" path="res://art/Player/dogrunv2-Sheet-Sheet.png" id="5_v2q1q"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/AirState.gd" id="6_byrm8"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/JumpState.gd" id="6_xn3d4"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/PlayerHealth.gd" id="9_hr7x4"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/Physics Components.gd" id="9_jumxf"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/DeadState.gd" id="13_47enr"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/GlidingState.gd" id="14_vj8r3"]
[ext_resource type="Script" path="res://Script/Modular Scripts/hurtbox_components.gd" id="14_w4005"]
[ext_resource type="Script" path="res://Script/Modular Scripts/respawn_manager.gd" id="15_1bl7q"]
[ext_resource type="FontFile" uid="uid://bnf2p438dv3b5" path="res://Fonts/Pixellari.ttf" id="16_qt5yi"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/PushingState.gd" id="17_h6uys"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/pulling_state.gd" id="20_dvwr5"]
[ext_resource type="Script" path="res://Script/DogPlayerFSM/dash_state.gd" id="21_qhtuv"]
[ext_resource type="Script" path="res://Script/Interactables Script/gpu_particles.gd" id="24_jjt7p"]

[sub_resource type="Theme" id="Theme_f4cmb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_q2f71"]
size = Vector2(33, 25)

[sub_resource type="AtlasTexture" id="AtlasTexture_l3c7c"]
atlas = ExtResource("2_dx8ja")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4re1r"]
atlas = ExtResource("2_dx8ja")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gaw4u"]
atlas = ExtResource("2_dx8ja")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvboy"]
atlas = ExtResource("4_rgvto")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bybh"]
atlas = ExtResource("4_rgvto")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uk4p5"]
atlas = ExtResource("4_rgvto")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ngdby"]
atlas = ExtResource("4_rgvto")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_uu031"]
atlas = ExtResource("4_rgvto")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_a0n1m"]
atlas = ExtResource("4_kee2m")
region = Rect2(0, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_q7rmc"]
atlas = ExtResource("4_kee2m")
region = Rect2(200, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_fobva"]
atlas = ExtResource("4_kee2m")
region = Rect2(100, 0, 100, 100)

[sub_resource type="AtlasTexture" id="AtlasTexture_xudjg"]
atlas = ExtResource("2_lkn1a")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k4vk0"]
atlas = ExtResource("2_lkn1a")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_7pkdd"]
atlas = ExtResource("2_lkn1a")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6es7b"]
atlas = ExtResource("4_rgvto")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_cyquy"]
atlas = ExtResource("5_v2q1q")
region = Rect2(0, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_vukqc"]
atlas = ExtResource("5_v2q1q")
region = Rect2(64, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6i2i5"]
atlas = ExtResource("5_v2q1q")
region = Rect2(128, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_fay7v"]
atlas = ExtResource("5_v2q1q")
region = Rect2(192, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_j7u6w"]
atlas = ExtResource("5_v2q1q")
region = Rect2(256, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_gv5rh"]
atlas = ExtResource("5_v2q1q")
region = Rect2(320, 0, 64, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_iitt5"]
atlas = ExtResource("5_v2q1q")
region = Rect2(384, 0, 64, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_i2mux"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_l3c7c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4re1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaw4u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gaw4u")
}],
"loop": false,
"name": &"bite_attack",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvboy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bybh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uk4p5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ngdby")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uu031")
}],
"loop": true,
"name": &"fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_a0n1m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q7rmc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fobva")
}],
"loop": false,
"name": &"glide",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xudjg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k4vk0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7pkdd")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6es7b")
}],
"loop": true,
"name": &"jump",
"speed": 1.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_cyquy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vukqc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6i2i5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fay7v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j7u6w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gv5rh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iitt5")
}],
"loop": true,
"name": &"run",
"speed": 15.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_xnpy1"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 200.0
initial_velocity_max = 400.0
gravity = Vector3(2.08165e-12, 2.08165e-12, 2.08165e-12)
scale_max = 3.0
color = Color(1, 0.227451, 0.129412, 1)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_byipc"]
size = Vector2(48, 32)

[node name="CharacterBody2D" type="CharacterBody2D" node_paths=PackedStringArray("anim", "physics", "health_component", "hurtbox_component") groups=["player"]]
collision_layer = 2
collision_mask = 1025
script = ExtResource("1_njf21")
anim = NodePath("AnimatedSprite2D")
physics = NodePath("Physics Components")
health_component = NodePath("Health Components")
hurtbox_component = NodePath("Hurtbox Components")

[node name="UI" type="CanvasLayer" parent="."]

[node name="ProgressBar" type="TextureProgressBar" parent="UI"]
unique_name_in_owner = true
offset_left = -36.0
offset_right = 164.0
offset_bottom = 100.0
size_flags_horizontal = 4
size_flags_vertical = 4
theme = SubResource("Theme_f4cmb")
step = 0.1
value = 100.0
texture_under = ExtResource("2_hitdm")
texture_over = ExtResource("3_by805")
texture_progress = ExtResource("4_xa1wg")
texture_progress_offset = Vector2(84, 36)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -13)
shape = SubResource("RectangleShape2D_q2f71")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
position = Vector2(0, -16)
sprite_frames = SubResource("SpriteFrames_i2mux")
animation = &"idle"
script = ExtResource("3_ai8m0")
player = NodePath("..")

[node name="landeffect" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -5)

[node name="Physics Components" type="Node" parent="." node_paths=PackedStringArray("player")]
unique_name_in_owner = true
script = ExtResource("9_jumxf")
player = NodePath("..")
jump_height = 85.0
jump_time_to_peak = 0.3
jump_time_to_fall = 0.25
air_resistance = 700
acceleration = 500.0
friction = 2000.0
max_speed = 280.0
speed_multiplier = 300.0

[node name="Health Components" type="Node" parent="." node_paths=PackedStringArray("player", "CharacterBody")]
script = ExtResource("9_hr7x4")
player = NodePath("..")
CharacterBody = NodePath("..")

[node name="PlayerStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_bn38j")

[node name="IdleState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("4_bagpv")

[node name="RunState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("5_2emg4")

[node name="AirState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_byrm8")

[node name="DeadState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("13_47enr")

[node name="GlidingState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("14_vj8r3")

[node name="JumpState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("6_xn3d4")

[node name="PullingState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("20_dvwr5")

[node name="PushingState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("17_h6uys")

[node name="DashState" type="Node" parent="PlayerStateMachine"]
script = ExtResource("21_qhtuv")

[node name="Hurtbox Components" type="Area2D" parent="." node_paths=PackedStringArray("health_components", "gpu_particles_2d")]
unique_name_in_owner = true
visible = false
collision_layer = 2
collision_mask = 128
script = ExtResource("14_w4005")
health_components = NodePath("../Health Components")
gpu_particles_2d = NodePath("GPUParticles2D")

[node name="GPUParticles2D" type="GPUParticles2D" parent="Hurtbox Components"]
position = Vector2(0, -15)
emitting = false
amount = 20
process_material = SubResource("ParticleProcessMaterial_xnpy1")
lifetime = 0.2
one_shot = true
explosiveness = 1.0
randomness = 1.0
script = ExtResource("24_jjt7p")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox Components"]
position = Vector2(0, -15)
shape = SubResource("RectangleShape2D_byipc")

[node name="Respawn Manager" type="Node" parent="." node_paths=PackedStringArray("health_components", "player")]
script = ExtResource("15_1bl7q")
health_components = NodePath("../Health Components")
player = NodePath("..")

[node name="Coyote Time" type="Timer" parent="."]
unique_name_in_owner = true

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -19.0
offset_top = -71.0
offset_right = 21.0
offset_bottom = -48.0
theme_override_fonts/font = ExtResource("16_qt5yi")
text = "hello"

[node name="RaycastL" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(-23, 0)
collision_mask = 1024
hit_from_inside = true
collide_with_areas = true

[node name="RaycastR" type="RayCast2D" parent="."]
position = Vector2(0, -10)
target_position = Vector2(23, 0)
collision_mask = 1024
hit_from_inside = true
collide_with_areas = true

[connection signal="died" from="Health Components" to="Respawn Manager" method="_on_health_components_died"]
[connection signal="took_damage" from="Health Components" to="Health Components" method="_on_took_damage"]
[connection signal="state_changed" from="PlayerStateMachine" to="AnimatedSprite2D" method="_on_player_state_machine_state_changed"]
[connection signal="floor" from="PlayerStateMachine/AirState" to="." method="_on_air_state_floor"]
[connection signal="PlayerAlive" from="Respawn Manager" to="Health Components" method="_on_respawn_manager_player_alive"]
